@@ -6,6 +6,10 @@
 
                                   Changelog
 
+Yang Tse (6 Mar 2008)
+- Fix regression on Curl_socket_ready() and Curl_poll() so that these will
+  again fail on select/poll errors different than EINTR.
+
 Daniel Fandrich (5 Mar 2008)
 - Fixed the test harness so it will write out zero-length data files.
 
